feat: Enhance borrowing and returning book functionality with detailed result handling

--- a/android/.instructions.md
+++ b/android/.instructions.md
@@ -14,6 +14,7 @@ applyTo: "android/**"
   - `network`: Retrofit/OkHttp services, DTOs, and mappers for ISBN metadata fetches.
   - `common`: Shared validation helpers, time/formatting utilities, and result wrappers.
 - Keep `libdocs/` assets out of runtime builds; treat them as design references only.
+  - Favor straightforward implementations over elaborate architectures; aim for a minimal app that simply works.
 
 ## UI & state management
 - Build UI exclusively with Jetpack Compose + Material 3; follow unidirectional data flow and hoist state to ViewModels or higher-level composables.
@@ -24,7 +25,7 @@ applyTo: "android/**"
 - Persist all entities with Room; any stock mutation (borrow/return, inventory adjustments) must run inside a single Room transaction.
 - Borrow flow: require `availableCount > 0`, decrement it, and insert `Loan(status = BORROWED)`.
 - Return flow: update `Loan.status = RETURNED`, increment `availableCount`, and ensure the value stays within `[0, copyCount]`.
-- Model migrations carefully—add migration specs and schema tests when entity definitions change.
+- Model migrations carefully—add migration specs when entity definitions change.
 
 ## Validation & identifiers
 - Validate `StudentId` with the regex `^\d{8}$` at every entry point (UI, use cases, repositories).
@@ -36,15 +37,11 @@ applyTo: "android/**"
 - Restrict network calls to ISBN metadata only; do not transmit student, loan, or inventory data.
 - Configure Retrofit/OkHttp with short timeouts and a small disk cache; avoid unnecessary dependencies or API keys.
 
-## Build, test, and quality gates
+## Build & install
 - From the `android/` directory run:
   - `./gradlew assembleDebug`
   - `./gradlew installDebug`
-  - `./gradlew testDebugUnitTest`
-  - `./gradlew connectedDebugAndroidTest`
-  - `./gradlew lint`
 - If KSP or Room schema generation stalls, retry with `./gradlew clean assembleDebug`.
-- Do not merge changes unless `assembleDebug` and `lint` both succeed; include output summaries in PRs.
 
 ## Code review expectations
 - Highlight any adjustments to scanning or networking in PR descriptions, detailing impacts on permissions, validation, and offline behavior.
