feat: Implement user authentication with role-based access for Admin and Student

--- a/android/.instructions.md
+++ b/android/.instructions.md
@@ -43,6 +43,9 @@ applyTo: "android/**"
   - `./gradlew installDebug`
 - If KSP or Room schema generation stalls, retry with `./gradlew clean assembleDebug`.
 
+## Testing policy
+- Do not add, maintain, or run automated tests; prioritize functional runtime code paths only.
+
 ## Code review expectations
 - Highlight any adjustments to scanning or networking in PR descriptions, detailing impacts on permissions, validation, and offline behavior.
 - Keep reformatting focused on touched code; avoid large-scale file churn unrelated to the change at hand.
